src/objects/Milestone1_Project__c.object
<CustomObject>
    <fields>
        <fullName>Total_Expense_Incurred__c</fullName>
        <inlineHelpText>Calculated from expense records related to tasks on all child milestones</inlineHelpText>
        <label>Total Expense Incurred</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Hours_Budget__c</fullName>
        <inlineHelpText>The total hours budget for this project.</inlineHelpText>
        <label>Total Hours Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Hours_Budget_from_Milestones__c</fullName>
        <inlineHelpText>Calculated from hours budgets for milestones in this project.</inlineHelpText>
        <label>Total Hours Budget from Milestones</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Hours_Estimate__c</fullName>
        <inlineHelpText>Calculated from hours estimates on all child milestones</inlineHelpText>
        <label>Total Hours Estimate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Hours_Incurred__c</fullName>
        <inlineHelpText>Calculated from time records related to tasks on all child milestones</inlineHelpText>
        <label>Total Hours Incurred</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Late_Task_Count__c</fullName>
        <inlineHelpText>How many tasks associated with this project are late?  (Calculated)</inlineHelpText>
        <label>Total Late Task Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Open_Task_Count__c</fullName>
        <inlineHelpText>How many open tasks are there in this project? (Calculated. Includes Late and Blocked tasks.)</inlineHelpText>
        <label>Total Open Task Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <description>T&amp;L: Pulled from platform: URL</description>
        <inlineHelpText>Pulled from platform: URL</inlineHelpText>
        <label>URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_ID__c</fullName>
        <formula>CASESAFEID( Id )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Manually populated from platform (unique ID)</inlineHelpText>
        <label>Unique ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Uploaded_Promo_photo__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Pulled from platform: promo photo from course</inlineHelpText>
        <label>Uploaded: Promo photo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Verification_is_enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Integrate such that box is checked if verificationEnabledAt is not empty, and unchecked if verificationEnabledAt is empty.</inlineHelpText>
        <label>Verification is enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Videos__c</fullName>
        <inlineHelpText>Pulled from platform: # videos across modules within course</inlineHelpText>
        <label># Videos</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Welcome_Message_Set__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Integrate with field to see if welcome message is empty, or not.</inlineHelpText>
        <label>Welcome Message Set</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>videos_with_subtitles__c</fullName>
        <inlineHelpText>Integrate to field with %videos with subtitles uploaded</inlineHelpText>
        <label>% videos with subtitles</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Financial_Advance_Amount__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_Active_Projects</fullName>
        <columns>NAME</columns>
        <columns>Deadline__c</columns>
        <columns>Total_Blocked_Task_Count__c</columns>
        <columns>Total_Late_Task_Count__c</columns>
        <columns>Total_Open_Task_Count__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>My Active Projects</label>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <recordTypes>
        <fullName>CSM_T_L_Proposal_Management</fullName>
        <active>true</active>
        <description>Project record type for T&amp;L and CSM to manage proposal process</description>
        <label>CSM/T&amp;L: Proposal Management</label>
    </recordTypes>
    <recordTypes>
        <fullName>Marketing_Plan</fullName>
        <active>true</active>
        <description>Project record type for marketing initiatives</description>
        <label>Partnerships: Marketing Plan</label>
    </recordTypes>
    <recordTypes>
        <fullName>Partnerships_Account_Plan</fullName>
        <active>true</active>
        <description>Account Plan for Partnership Managers</description>
        <label>Partnerships: Account Plan</label>
    </recordTypes>
    <recordTypes>
        <fullName>TL_Production_Course</fullName>
        <active>true</active>
        <description>Project record type for courses</description>
        <label>T&amp;L Production: Course</label>
    </recordTypes>
    <recordTypes>
        <fullName>TL_Production_Degree</fullName>
        <active>true</active>
        <description>Project record type for degrees</description>
        <label>T&amp;L Production: Degree</label>
    </recordTypes>
    <recordTypes>
        <fullName>TL_Production_S12n</fullName>
        <active>true</active>
        <description>Project record type for S12n</description>
        <label>T&amp;L Production: S12n</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Kickoff_before_deadline</fullName>
        <active>false</active>
        <description>Kickoff must be less or equal than the deadline</description>
        <errorConditionFormula>NOT(ISNULL(Kickoff__c)) &amp;&amp; NOT(ISNULL(Deadline__c)) &amp;&amp; Deadline__c &lt; Kickoff__c</errorConditionFormula>
        <errorDisplayField>Kickoff__c</errorDisplayField>
        <errorMessage>Kickoff must be less or equal than the deadline</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Total_Expense_Budget_Negative_Numbers</fullName>
        <active>true</active>
        <errorConditionFormula>Total_Expense_Budget__c  &lt; 0</errorConditionFormula>
        <errorDisplayField>Total_Expense_Budget__c</errorDisplayField>
        <errorMessage>This value should be a positive number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Total_Hours_Budget_Negative_Numbers</fullName>
        <active>true</active>
        <errorConditionFormula>Total_Hours_Budget__c  &lt; 0</errorConditionFormula>
        <errorDisplayField>Total_Hours_Budget__c</errorDisplayField>
        <errorMessage>This value should be a positive number</errorMessage>
    </validationRules>
</CustomObject>